fix(sandbox): small fixes for local dev and library updates (#806)
* small fixes and updates

* run prettier

---------

Co-authored-by: Devtools <devtools@redhat.com>

--- a/workspaces/sandbox/deploy/base/app-config.yaml
+++ b/workspaces/sandbox/deploy/base/app-config.yaml
@@ -7,10 +7,27 @@ enableExperimentalRedirectFlow: true
 
 backend:
   baseUrl: http://localhost:3000
-  csp:
-    connect-src: ["'self'", 'http:', 'https:']
   listen:
     port: 3000
+  csp:
+    img-src:
+      - "'self'"
+      - 'data:'
+      - 'https://catamphetamine.github.io'
+    script-src:
+      - "'self'"
+      - "'unsafe-eval'"
+      - 'https://cdn.segment.com'
+      - 'https://www.google.com'
+      - 'https://www.gstatic.com'
+    script-src-elem:
+      - "'self'"
+      - 'https://cdn.segment.com'
+      - 'https://www.google.com'
+      - 'https://www.gstatic.com'
+    frame-src:
+      - "'self'"
+      - 'https://www.google.com'
   cors:
     origin: http://localhost:3000
     methods: [GET, HEAD, PATCH, POST, PUT, DELETE]
