--- a/workspaces/homepage/plugins/dynamic-home-page/package.json
+++ b/workspaces/homepage/plugins/dynamic-home-page/package.json
@@ -32,13 +32,17 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/catalog-client": "^1.9.1",
+    "@backstage/catalog-model": "^1.7.3",
     "@backstage/core-components": "^0.16.4",
     "@backstage/core-plugin-api": "^1.10.4",
     "@backstage/plugin-catalog-react": "^1.15.2",
     "@backstage/plugin-home": "^0.8.5",
     "@backstage/plugin-home-react": "^0.1.23",
     "@backstage/plugin-search-react": "^1.8.6",
+    "@backstage/plugin-user-settings": "^0.8.19",
     "@backstage/theme": "^0.6.4",
+    "@mui/icons-material": "5.16.4",
     "@mui/material": "5.16.14",
     "@mui/styles": "5.16.14",
     "@scalprum/react-core": "0.9.3",
