--- a/workspaces/openshift-image-registry/plugins/openshift-image-registry/package.json
+++ b/workspaces/openshift-image-registry/plugins/openshift-image-registry/package.json
@@ -59,7 +59,7 @@
     "@backstage/test-utils": "^1.7.5",
     "@janus-idp/cli": "1.19.1",
     "@mui/icons-material": "^6.1.6",
-    "@redhat-developer/red-hat-developer-hub-theme": "0.5.1",
+    "@red-hat-developer-hub/backstage-plugin-theme": "^0.6.0",
     "@spotify/prettier-config": "^15.0.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "14.3.1",
