--- a/workspaces/orchestrator/plugins/orchestrator/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator/package.json
@@ -89,7 +89,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@mui/icons-material": "^5.15.8",
-    "@redhat-developer/red-hat-developer-hub-theme": "0.5.1",
+    "@red-hat-developer-hub/backstage-plugin-theme": "^0.6.0",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^15.0.0",
