--- a/workspaces/global-header/packages/app/package.json
+++ b/workspaces/global-header/packages/app/package.json
@@ -48,9 +48,10 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@mui/icons-material": "5.16.14",
+    "@mui/material": "5.16.14",
     "@red-hat-developer-hub/backstage-plugin-global-header": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-global-header-test": "workspace:^",
-    "@red-hat-developer-hub/backstage-plugin-theme": "^0.8.1",
+    "@red-hat-developer-hub/backstage-plugin-theme": "^0.8.2",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
