--- a/workspaces/marketplace/plugins/marketplace-backend/package.json
+++ b/workspaces/marketplace/plugins/marketplace-backend/package.json
@@ -44,12 +44,15 @@
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
+    "yaml": "^2.7.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.3.0",
     "@backstage/cli": "^0.30.0",
+    "@backstage/config": "^1.3.2",
     "@backstage/plugin-catalog-node": "^1.16.0",
+    "@backstage/types": "^1.2.1",
     "@types/express": "*",
     "@types/supertest": "^2.0.12",
     "msw": "^1.0.0",
