--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@backstage/cli": "^0.30.0",
+    "@backstage/config": "^1.3.2",
     "@backstage/core-app-api": "^1.15.5",
     "@backstage/dev-utils": "^1.1.7",
     "@backstage/frontend-test-utils": "^0.2.6",
@@ -83,6 +84,8 @@
   ],
   "files": [
     "app-config.dynamic.yaml",
-    "dist"
-  ]
+    "dist",
+    "config.d.ts"
+  ],
+  "configSchema": "config.d.ts"
 }
