--- a/workspaces/global-header/package.json
+++ b/workspaces/global-header/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "tsc": "tsc",
     "tsc:full": "tsc --skipLibCheck true --incremental false",
-    "dev": "yarn workspaces foreach -A --include backend --include app --parallel -v -i run start",
-    "start": "yarn workspace app start",
+    "start": "backstage-cli repo start",
     "start-backend": "yarn workspace backend start",
     "build:backend": "yarn workspace backend build",
     "build-image": "yarn workspace backend build-image",
@@ -40,9 +39,9 @@
     "directory": "workspaces/global-header"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.30.0",
+    "@backstage/cli": "^0.32.1",
     "@backstage/e2e-test-utils": "^0.1.1",
-    "@backstage/repo-tools": "^0.13.0",
+    "@backstage/repo-tools": "^0.13.3",
     "@changesets/cli": "^2.27.1",
     "@playwright/test": "1.52.0",
     "@spotify/prettier-config": "^12.0.0",
