--- a/workspaces/orchestrator/plugins/orchestrator-form-react/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-react/package.json
@@ -36,14 +36,15 @@
     "@backstage/core-components": "^0.17.0",
     "@backstage/core-plugin-api": "^1.10.5",
     "@backstage/types": "^1.2.1",
-    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.17.1",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-api": "workspace:^",
     "@rjsf/core": "^5.21.2",
     "@rjsf/material-ui": "^5.21.2",
     "@rjsf/utils": "^5.21.2",
     "@rjsf/validator-ajv8": "^5.21.2",
     "json-schema-library": "^9.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tss-react": "^4.9.18"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
