--- a/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
@@ -55,15 +55,17 @@
     "@backstage/core-plugin-api": "^1.10.1",
     "@backstage/theme": "^0.6.2",
     "@backstage/types": "^1.2.1",
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.17.1",
+    "@mui/styles": "5.16.14",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-api": "workspace:^",
+    "@rjsf/material-ui": "^5.21.2",
     "@rjsf/utils": "^5.21.2",
     "json-schema": "^0.4.0",
     "jsonata": "^2.0.6",
     "lodash": "^4.17.21",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "tss-react": "^4.9.18"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
