--- a/workspaces/orchestrator/plugins/orchestrator/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator/package.json
@@ -64,6 +64,7 @@
     "@backstage/types": "^1.2.1",
     "@kie-tools-core/editor": "^10.0.0",
     "@kie-tools/serverless-workflow-standalone-editor": "^10.0.0",
+    "@material-ui/core": "^4.12.4",
     "@monaco-editor/react": "^4.6.0",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-common": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-api": "workspace:^",
@@ -76,6 +77,7 @@
     "react-moment": "^1.1.3",
     "react-use": "^17.4.0",
     "swr": "^2.0.0",
+    "tss-react": "^4.9.18",
     "uuid": "^11.0.3",
     "vscode-languageserver-types": "3.17.5"
   },
@@ -84,10 +86,8 @@
     "@backstage/dev-utils": "^1.1.8",
     "@backstage/test-utils": "^1.7.6",
     "@janus-idp/cli": "3.6.1",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@mui/icons-material": "^5.15.8",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.17.1",
     "@red-hat-developer-hub/backstage-plugin-theme": "^0.8.0",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.0.0",
@@ -99,10 +99,8 @@
     "prettier": "3.5.3"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@mui/icons-material": "^5.15.8",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.17.1",
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.13.1 || ^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.3.0"
