--- a/workspaces/global-floating-action-button/package.json
+++ b/workspaces/global-floating-action-button/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "tsc": "tsc",
     "tsc:full": "tsc --skipLibCheck true --incremental false",
-    "dev": "yarn workspaces foreach -A --include backend --include app --parallel -v -i run start",
+    "start": "backstage-cli repo start",
     "build:all": "backstage-cli repo build --all",
     "build:api-reports": "yarn build:api-reports:only --tsc",
     "build:api-reports:only": "backstage-repo-tools api-reports -o ae-wrong-input-file-type,ae-undocumented --validate-release-tags",
@@ -34,9 +34,9 @@
     "directory": "workspaces/global-floating-action-button"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.30.0",
+    "@backstage/cli": "^0.32.1",
     "@backstage/e2e-test-utils": "^0.1.1",
-    "@backstage/repo-tools": "^0.13.0",
+    "@backstage/repo-tools": "^0.13.4",
     "@changesets/cli": "^2.27.1",
     "@spotify/prettier-config": "^12.0.0",
     "knip": "^5.27.4",
