feat(extensions): allow installing plugins based on access and env (#769)
* feat(extensions): allow installing plugins

* add RBAC configuration

* use the fetch API to get the plugin configuration

* updated UI to show error states

* add installation api

* disable plugin installation for production env

--- a/workspaces/marketplace/app-config.yaml
+++ b/workspaces/marketplace/app-config.yaml
@@ -9,9 +9,10 @@ backend:
   # Used for enabling authentication, secret is shared by all backend plugins
   # See https://backstage.io/docs/auth/service-to-service-auth for
   # information on the format
-  # auth:
-  #   keys:
-  #     - secret: ${BACKEND_SECRET}
+  auth:
+    dangerouslyDisableDefaultAuthPolicy: true
+    # keys:
+    #   - secret: ${BACKEND_SECRET}
   baseUrl: http://localhost:7007
   listen:
     port: 7007
@@ -67,6 +68,13 @@ auth:
   providers:
     # See https://backstage.io/docs/auth/guest/provider
     guest: {}
+    github:
+      development:
+        clientId: ${GITHUB_CLIENT_ID}
+        clientSecret: ${GITHUB_CLIENT_SECRET}
+        signIn:
+          resolvers:
+            - resolver: usernameMatchingUserEntityName
 
 scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
@@ -88,7 +96,6 @@ catalog:
           Location,
         ]
   locations:
-    # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
       target: ../../catalog-info.yaml
       rules:
@@ -124,3 +131,4 @@ extensions:
   #   enabled: true
   #   saveToSingleFile:
   #     file: ${EXTENSIONS_PLUGIN_CONFIG}
+dangerouslyAllowSignInWithoutUserInCatalog: true
