--- a/workspaces/marketplace/packages/app/package.json
+++ b/workspaces/marketplace/packages/app/package.json
@@ -19,6 +19,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@backstage-community/plugin-rbac": "^1.40.1",
     "@backstage/app-defaults": "^1.5.17",
     "@backstage/catalog-model": "^1.7.3",
     "@backstage/cli": "^0.30.0",
