--- a/workspaces/marketplace/packages/backend/package.json
+++ b/workspaces/marketplace/packages/backend/package.json
@@ -21,6 +21,7 @@
     "build-image": "docker build ../.. -f Dockerfile --tag backstage"
   },
   "dependencies": {
+    "@backstage-community/plugin-rbac-backend": "6.0.0",
     "@backstage/backend-defaults": "^0.8.1",
     "@backstage/config": "^1.3.2",
     "@backstage/plugin-app-backend": "^0.4.5",
