--- a/workspaces/orchestrator/plugins/orchestrator-backend/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-backend/package.json
@@ -85,6 +85,7 @@
     "express-promise-router": "^4.1.1",
     "fs-extra": "^10.1.0",
     "isomorphic-git": "^1.23.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "openapi-backend": "^5.10.5",
     "yn": "^5.0.0"
