--- a/workspaces/theme/package.json
+++ b/workspaces/theme/package.json
@@ -14,6 +14,7 @@
     "build:all": "backstage-cli repo build --all",
     "build:api-reports": "yarn build:api-reports:only --tsc",
     "build:api-reports:only": "backstage-repo-tools api-reports -o ae-wrong-input-file-type,ae-missing-release-tag,ae-undocumented --validate-release-tags",
+    "build:knip-reports": "backstage-repo-tools knip-reports",
     "build-image": "yarn workspace backend build-image",
     "clean": "backstage-cli repo clean",
     "test": "backstage-cli repo test",
