--- a/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
@@ -61,6 +61,7 @@
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-api": "workspace:^",
     "@rjsf/material-ui": "^5.21.2",
     "@rjsf/utils": "^5.21.2",
+    "clsx": "^2.1.1",
     "json-schema": "^0.4.0",
     "jsonata": "^2.0.6",
     "lodash": "^4.17.21",
