add code owners (#1017)
Signed-off-by: Yaron Dayagi <ydayagi@redhat.com>
Co-authored-by: Kim Tsao <84398375+kim-tsao@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -18,3 +18,4 @@
 /workspaces/orchestrator                            @batzionb @mareklibra @gciavarrini
 /workspaces/theme                                   @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff
 /workspaces/sandbox                                 @lucifergene @rohitkrai03 @karthikjeeyar @xcoulon @alexeykazakov @mfrancisc @rsoaresd @jrosental
+/workspaces/redhat-resource-optimization            @ydayagi @mareklibra @batzionb @PreetiW
