--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -55,14 +55,14 @@
         "github>redhat-developer/rhdh-plugins//.github/renovate-presets/workspace/rhdh-ai-presets",
         "github>redhat-developer/rhdh-plugins//.github/renovate-presets/workspace/rhdh-orchestrator-presets",
         "github>redhat-developer/rhdh-plugins//.github/renovate-presets/workspace/rhdh-sandbox-presets",
-        "github>redhat-developer/rhdh-plugins//.github/renovate-presets/workspace/rhdh-openshift-image-registry-presets.json",
-        "github>redhat-developer/rhdh-plugins//.github/renovate-presets/workspace/rhdh-redhat-resource-optimization-presets.json"
+        "github>redhat-developer/rhdh-plugins//.github/renovate-presets/workspace/rhdh-openshift-image-registry-presets",
+        "github>redhat-developer/rhdh-plugins//.github/renovate-presets/workspace/rhdh-redhat-resource-optimization-presets"
       ]
     },
     {
-      "groupName": "Core Backstage packages",
-      "dependencyDashboardApproval": true,
-      "matchDepNames": ["/^@backstage//"]
+      "groupName": "Upstream Backstage packages",
+      "enabled": false,
+      "matchDepNames": ["/^@backstage//", "/^@backstage-community//"]
     }
   ],
   "ignorePaths": ["**/dist-dynamic/**"]
