--- a/workspaces/sandbox/plugins/sandbox/package.json
+++ b/workspaces/sandbox/plugins/sandbox/package.json
@@ -44,9 +44,11 @@
     "@backstage/core-components": "^0.16.3",
     "@backstage/core-plugin-api": "^1.10.3",
     "@backstage/theme": "^0.6.3",
-    "@material-ui/core": "^4.12.4",
+    "@lit/react": "^1.0.5",
     "@mui/icons-material": "^5.16.14",
     "@mui/material": "^5.16.14",
+    "@rhds/elements": "^2.0.1",
+    "@rhds/icons": "^1.1.1",
     "libphonenumber-js": "^1.12.8",
     "lodash": "^4.17.21",
     "react-phone-number-input": "^3.4.12",
