--- a/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
+++ b/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
@@ -45,6 +45,7 @@
     "semver": "^7.6.3"
   },
   "devDependencies": {
+    "@backstage/backend-dynamic-feature-service": "0.6.0",
     "@backstage/backend-test-utils": "^1.3.0",
     "@backstage/cli": "^0.30.0",
     "@types/glob": "^8.1.0"
