--- a/workspaces/lightspeed/catalog-info.yaml
+++ b/workspaces/lightspeed/catalog-info.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: red-hat-developer-hub-lightspeed
-  title: RHDH Lightspeed plugin
+  name: developer-lightspeed
+  title: Developer Lightspeed plugin
   tags:
     - backstage
     - rhdh
