chore(marketplace): Bump to backstage v1.39.1 (#963)
* chore(marketplace): Bump to backstage v1.39.1

Signed-off-by: Yi Cai <yicai@redhat.com>

* updated yarn.lock

Signed-off-by: Yi Cai <yicai@redhat.com>

* rebase and resolve conflicts

Signed-off-by: Yi Cai <yicai@redhat.com>

* fixed failed unit tests

Signed-off-by: Yi Cai <yicai@redhat.com>

* replaced yarn dev with yarn start

Signed-off-by: Yi Cai <yicai@redhat.com>

* updated unit tests and yarn.lock

Signed-off-by: Yi Cai <yicai@redhat.com>

* code cleanup

Signed-off-by: Yi Cai <yicai@redhat.com>

* merged in upstream code

Signed-off-by: Yi Cai <yicai@redhat.com>

* merged upstream code

Signed-off-by: Yi Cai <yicai@redhat.com>

* yarn dedupe

Signed-off-by: Yi Cai <yicai@redhat.com>

---------

Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/workspaces/marketplace/Makefile
+++ b/workspaces/marketplace/Makefile
@@ -58,7 +58,7 @@ copy-config-to-rhdh:
 	@echo
 	@echo You can start your rhdh now with
 	@echo
-	@echo yarn dev
+	@echo yarn start
 	@echo
 
 remove-from-rhdh:
