--- a/workspaces/marketplace/package.json
+++ b/workspaces/marketplace/package.json
@@ -6,8 +6,7 @@
     "node": "18 || 20"
   },
   "scripts": {
-    "dev": "yarn workspaces foreach -A --include backend --include app --parallel -v -i run start",
-    "start": "yarn workspace app start",
+    "start": "backstage-cli repo start",
     "start-backend": "yarn workspace backend start",
     "build:backend": "yarn workspace backend build",
     "tsc": "tsc",
@@ -41,13 +40,14 @@
     "directory": "workspaces/marketplace"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.30.0",
+    "@backstage/cli": "^0.32.1",
     "@backstage/e2e-test-utils": "^0.1.1",
-    "@backstage/repo-tools": "^0.13.0",
+    "@backstage/repo-tools": "^0.13.4",
     "@changesets/cli": "^2.27.1",
     "@playwright/test": "1.53.1",
     "@spotify/prettier-config": "^12.0.0",
     "knip": "^5.27.4",
+    "minimatch": "3",
     "node-gyp": "^9.0.0",
     "prettier": "^3.4.2",
     "typescript": "~5.3.0"
