--- a/workspaces/marketplace/plugins/marketplace/package.json
+++ b/workspaces/marketplace/plugins/marketplace/package.json
@@ -34,13 +34,14 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/catalog-client": "^1.9.1",
-    "@backstage/core-components": "^0.16.4",
-    "@backstage/core-plugin-api": "^1.10.4",
-    "@backstage/plugin-catalog-react": "^1.15.2",
-    "@backstage/plugin-permission-react": "^0.4.31",
-    "@backstage/theme": "^0.6.4",
+    "@backstage/catalog-client": "^1.10.0",
+    "@backstage/core-components": "^0.17.2",
+    "@backstage/core-plugin-api": "^1.10.7",
+    "@backstage/plugin-catalog-react": "^1.18.0",
+    "@backstage/plugin-permission-react": "^0.4.34",
+    "@backstage/theme": "^0.6.6",
     "@backstage/types": "^1.2.1",
+    "@material-ui/core": "^4.12.2",
     "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.12.2",
@@ -58,9 +59,9 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.30.0",
-    "@backstage/dev-utils": "^1.1.7",
-    "@backstage/test-utils": "^1.7.5",
+    "@backstage/cli": "^0.32.1",
+    "@backstage/dev-utils": "^1.1.10",
+    "@backstage/test-utils": "^1.7.8",
     "@red-hat-developer-hub/backstage-plugin-theme": "^0.9.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
