chore(global-header): update default mount points with quick links (#1039)
Signed-off-by: Rohit Rai <rohitkrai03@gmail.com>

--- a/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
+++ b/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
@@ -42,6 +42,31 @@ dynamicPlugins:
             priority: 85
 
         - mountPoint: global.header/component
+          importName: ApplicationLauncherDropdown
+          config:
+            priority: 82
+
+        - mountPoint: global.header/application-launcher
+          importName: MenuItemLink
+          config:
+            section: Documentation
+            priority: 150
+            props:
+              title: Developer Hub
+              icon: developerHub
+              link: https://docs.redhat.com/en/documentation/red_hat_developer_hub
+
+        - mountPoint: global.header/application-launcher
+          importName: MenuItemLink
+          config:
+            section: Developer Tools
+            priority: 100
+            props:
+              title: RHDH Local
+              icon: developerHub
+              link: https://github.com/redhat-developer/rhdh-local
+
+        - mountPoint: global.header/component
           importName: SupportButton
           config:
             priority: 80
