--- a/workspaces/sandbox/deploy/base/app-config.yaml
+++ b/workspaces/sandbox/deploy/base/app-config.yaml
@@ -16,24 +16,40 @@ backend:
     script-src:
       - "'self'"
       - "'unsafe-eval'"
+      - "'unsafe-inline'"
       - 'https://cdn.segment.com'
       - 'https://www.google.com'
       - 'https://www.gstatic.com'
       - 'https://static.redhat.com'
       - 'https://consent.trustarc.com'
+      - 'https://www.redhat.com/ma/dpal.js'
+      - 'https://assets.adobedtm.com'
+      - 'https://www.youtube.com'
+      - 'https://s.ytimg.com'
+      - 'https://adobedc.demdex.net'
+      - 'https://smetrics.redhat.com'
     script-src-elem:
       - "'self'"
+      - "'unsafe-inline'"
       - 'https://cdn.segment.com'
       - 'https://www.google.com'
       - 'https://www.gstatic.com'
       - 'https://static.redhat.com'
       - 'https://consent.trustarc.com'
+      - 'https://www.redhat.com/ma/dpal.js'
+      - 'https://assets.adobedtm.com'
+      - 'https://www.youtube.com'
+      - 'https://s.ytimg.com'
+      - 'https://adobedc.demdex.net'
+      - 'https://smetrics.redhat.com'
     frame-src:
       - "'self'"
       - 'https://www.google.com'
       - 'https://static.redhat.com'
       - 'https://consent.trustarc.com'
       - 'https://consent-pref.trustarc.com'
+      - 'https://www.youtube.com'
+      - 'https://www.youtube-nocookie.com'
   listen:
     port: 3000
   cors:
