add sandbox owners (#1066)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,5 +17,5 @@
 /workspaces/openshift-image-registry                @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff @karthikjeeyar
 /workspaces/orchestrator                            @batzionb @mareklibra @gciavarrini
 /workspaces/theme                                   @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff
-/workspaces/sandbox                                 @lucifergene @rohitkrai03 @karthikjeeyar @xcoulon @alexeykazakov @mfrancisc @rsoaresd @jrosental
+/workspaces/sandbox                                 @lucifergene @rohitkrai03 @karthikjeeyar @xcoulon @alexeykazakov @mfrancisc @rsoaresd @jrosental @rajivnathan @MatousJobanek
 /workspaces/redhat-resource-optimization            @ydayagi @mareklibra @batzionb @PreetiW
