--- a/workspaces/adoption-insights/plugins/adoption-insights-backend/package.json
+++ b/workspaces/adoption-insights/plugins/adoption-insights-backend/package.json
@@ -52,6 +52,7 @@
     "@backstage/backend-test-utils": "^1.5.0",
     "@backstage/cli": "^0.32.1",
     "@types/express": "^4.17.6",
+    "@types/luxon": "^3.5.0",
     "@types/supertest": "^2.0.12",
     "supertest": "^6.2.4"
   },
