fix(homepage): Default homepage update to match new design (#1086)
* fix(homepage): Default homepage update to match new design

* fix lock file issue

* reverted react grid layout changes

* fix layout defaults

* fix entity layout

--- a/workspaces/homepage/plugins/dynamic-home-page/app-config.dynamic.yaml
+++ b/workspaces/homepage/plugins/dynamic-home-page/app-config.dynamic.yaml
@@ -7,32 +7,32 @@ dynamicPlugins:
           importName: DynamicHomePage
       mountPoints:
         - mountPoint: home.page/cards
-          importName: SearchBar
+          importName: OnboardingSection
           config:
             layouts:
-              xl: { w: 10, h: 1, x: 1 }
-              lg: { w: 10, h: 1, x: 1 }
-              md: { w: 10, h: 1, x: 1 }
-              sm: { w: 10, h: 1, x: 1 }
-              xs: { w: 12, h: 1 }
-              xxs: { w: 12, h: 1 }
+              xl: { w: 12, h: 5 }
+              lg: { w: 12, h: 5 }
+              md: { w: 12, h: 5 }
+              sm: { w: 12, h: 5 }
+              xs: { w: 12, h: 7 }
+              xxs: { w: 12, h: 13 }
         - mountPoint: home.page/cards
-          importName: QuickAccessCard
+          importName: EntitySection
           config:
             layouts:
-              xl: { w: 7, h: 8 }
-              lg: { w: 7, h: 8 }
-              md: { w: 7, h: 8 }
-              sm: { w: 12, h: 8 }
-              xs: { w: 12, h: 8 }
-              xxs: { w: 12, h: 8 }
+              xl: { w: 12, h: 6 }
+              lg: { w: 12, h: 6 }
+              md: { w: 12, h: 6 }
+              sm: { w: 12, h: 6 }
+              xs: { w: 12, h: 10 }
+              xxs: { w: 12, h: 14.5 }
         - mountPoint: home.page/cards
-          importName: CatalogStarredEntitiesCard
+          importName: TemplateSection
           config:
             layouts:
-              xl: { w: 5, h: 4, x: 7 }
-              lg: { w: 5, h: 4, x: 7 }
-              md: { w: 5, h: 4, x: 7 }
-              sm: { w: 12, h: 4 }
-              xs: { w: 12, h: 4 }
-              xxs: { w: 12, h: 4 }
+              xl: { w: 12, h: 5 }
+              lg: { w: 12, h: 5 }
+              md: { w: 12, h: 5 }
+              sm: { w: 12, h: 5 }
+              xs: { w: 12, h: 7.5 }
+              xxs: { w: 12, h: 13.5 }
