--- a/workspaces/homepage/packages/app/package.json
+++ b/workspaces/homepage/packages/app/package.json
@@ -45,7 +45,10 @@
     "@backstage/theme": "^0.6.6",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@openshift/dynamic-plugin-sdk": "^5.0.1",
     "@red-hat-developer-hub/backstage-plugin-dynamic-home-page": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-theme": "^0.9.1",
+    "@scalprum/react-core": "0.9.5",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
