--- a/workspaces/adoption-insights/plugins/adoption-insights/package.json
+++ b/workspaces/adoption-insights/plugins/adoption-insights/package.json
@@ -49,6 +49,7 @@
     "@mui/x-date-pickers": "5.0.20",
     "@red-hat-developer-hub/backstage-plugin-adoption-insights-common": "workspace:^",
     "date-fns": "2.30.0",
+    "date-fns-tz": "1.3.7",
     "react-use": "^17.2.4",
     "recharts": "^2.15.1"
   },
