--- a/workspaces/marketplace/packages/backend/package.json
+++ b/workspaces/marketplace/packages/backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@backstage-community/plugin-rbac-backend": "6.2.6",
     "@backstage/backend-defaults": "^0.10.0",
+    "@backstage/backend-dynamic-feature-service": "0.7.0",
     "@backstage/config": "^1.3.2",
     "@backstage/plugin-app-backend": "^0.5.2",
     "@backstage/plugin-auth-backend": "^0.25.0",
