--- a/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
+++ b/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
@@ -33,8 +33,11 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/backend-dynamic-feature-service": "0.7.0",
     "@backstage/backend-plugin-api": "^1.3.1",
+    "@backstage/catalog-client": "^1.10.0",
     "@backstage/catalog-model": "^1.7.4",
+    "@backstage/cli-common": "^0.1.15",
     "@backstage/plugin-catalog-common": "^1.1.4",
     "@backstage/plugin-catalog-node": "^1.17.0",
     "@backstage/types": "^1.2.1",
@@ -45,9 +48,9 @@
     "semver": "^7.6.3"
   },
   "devDependencies": {
-    "@backstage/backend-dynamic-feature-service": "0.6.0",
     "@backstage/backend-test-utils": "^1.5.0",
     "@backstage/cli": "^0.32.1",
+    "@backstage/config": "^1.3.2",
     "@types/glob": "^8.1.0"
   },
   "files": [
