--- a/workspaces/marketplace/plugins/marketplace-common/package.json
+++ b/workspaces/marketplace/plugins/marketplace-common/package.json
@@ -38,13 +38,13 @@
     "@backstage/backend-plugin-api": "^1.3.1",
     "@backstage/catalog-client": "^1.10.0",
     "@backstage/catalog-model": "^1.7.4",
-    "@backstage/core-plugin-api": "^1.10.8",
     "@backstage/errors": "^1.2.7",
     "@backstage/plugin-permission-common": "^0.9.0"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.5.0",
-    "@backstage/cli": "^0.32.1"
+    "@backstage/cli": "^0.32.1",
+    "@backstage/core-plugin-api": "^1.10.8"
   },
   "peerDependencies": {
     "@backstage/backend-plugin-api": "^1.3.1",
