feat(global-header): Add support for integration with RHDH quickstart (#1106)
* feat(global-header): Add support for integration with RHDH quickstart

* feat(quickstart): move quick start button and use context

--- a/workspaces/quickstart/plugins/quickstart/app-config.dynamic.yaml
+++ b/workspaces/quickstart/plugins/quickstart/app-config.dynamic.yaml
@@ -4,3 +4,7 @@ dynamicPlugins:
       mountPoints:
         - mountPoint: application/provider
           importName: QuickstartDrawerProvider
+        - mountPoint: global.header/help
+          importName: QuickstartButton
+          config:
+            priority: 100
