feat(orchestrator): add customAuthApi template evaluator family (#1137)
* feat(orchestrator): add customAuthApi template evaluator family

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* add custom-authentication-provider-module for dev-only purposes

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* register custom-authentication-provide in dev Backstage

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* yarn.lock

* yarn fix

* api-reports

* better phrasing

* repository fix

---------

Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/app-config.yaml
+++ b/workspaces/orchestrator/app-config.yaml
@@ -91,6 +91,13 @@ auth:
         signIn:
           resolvers:
             - resolver: emailMatchingUserEntityProfileEmail
+    github-two:
+      development:
+        clientId: ${GITHUB_APP_TWO_CLIENT_ID}
+        clientSecret: ${GITHUB_APP_TWO_CLIENT_SECRET}
+        signIn:
+          resolvers:
+            - resolver: emailMatchingUserEntityProfileEmail
 
 # permission:
 #   enabled: true
