--- a/workspaces/orchestrator/packages/app/package.json
+++ b/workspaces/orchestrator/packages/app/package.json
@@ -52,6 +52,7 @@
     "@red-hat-developer-hub/backstage-plugin-orchestrator": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-widgets": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-theme": "^0.9.0",
+    "custom-authentication-provider-module": "workspace:^",
     "history": "^5.3.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
