--- a/workspaces/orchestrator/packages/backend/package.json
+++ b/workspaces/orchestrator/packages/backend/package.json
@@ -54,6 +54,7 @@
     "@red-hat-developer-hub/backstage-plugin-scaffolder-backend-module-orchestrator": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
+    "custom-authentication-provider-module-backend": "workspace:^",
     "node-gyp": "^10.0.0",
     "pg": "^8.11.3",
     "winston": "^3.2.1"
