--- a/workspaces/sandbox/package.json
+++ b/workspaces/sandbox/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "scripts": {
     "dev": "yarn workspaces foreach -A --include backend --include app --parallel -v -i run start",
@@ -49,9 +49,9 @@
     "directory": "workspaces/sandbox"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.29.5",
+    "@backstage/cli": "^0.30.0",
     "@backstage/e2e-test-utils": "^0.1.1",
-    "@backstage/repo-tools": "^0.10.0",
+    "@backstage/repo-tools": "^0.13.0",
     "@changesets/cli": "^2.27.1",
     "@playwright/test": "^1.52.0",
     "@spotify/prettier-config": "^12.0.0",
