--- a/workspaces/lightspeed/package.json
+++ b/workspaces/lightspeed/package.json
@@ -6,7 +6,7 @@
     "node": "18 || 20"
   },
   "scripts": {
-    "dev": "yarn workspaces foreach -A --include backend --include app --parallel -v -i run start",
+    "dev": "backstage-cli repo start",
     "start": "yarn workspace app start",
     "start-backend": "yarn workspace backend start",
     "build:backend": "yarn workspace backend build",
@@ -41,9 +41,9 @@
     "directory": "workspaces/lightspeed"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.29.6",
+    "@backstage/cli": "^0.32.1",
     "@backstage/e2e-test-utils": "^0.1.1",
-    "@backstage/repo-tools": "^0.13.0",
+    "@backstage/repo-tools": "^0.13.4",
     "@changesets/cli": "^2.27.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@playwright/test": "1.53.0",
@@ -58,7 +58,9 @@
   },
   "resolutions": {
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "@backstage/plugin-catalog-backend": "2.0.0",
+    "@backstage/plugin-scaffolder-backend": "1.33.0"
   },
   "prettier": "@spotify/prettier-config",
   "lint-staged": {
