feat(extensions): add successful installation info alert (#1126)

--- a/workspaces/marketplace/plugins/marketplace/app-config.dynamic.yaml
+++ b/workspaces/marketplace/plugins/marketplace/app-config.dynamic.yaml
@@ -8,8 +8,10 @@ dynamicPlugins:
         - path: /extensions/catalog
           importName: DynamicMarketplacePluginRouter
       mountPoints:
+        - mountPoint: application/provider
+          importName: InstallationContextProvider
         - mountPoint: internal.plugins/tab
           importName: DynamicMarketplacePluginContent
           config:
-            path: catalog
+            path: extensions
             title: Catalog
