feat(extensions): add permission checks for package configuration endpoints (#1124)
* Introduce package configuration permission checks

Signed-off-by: Dominika Zemanovicova <dzemanov@redhat.com>

* feat(extensions): simplify router.test.ts (#1)

Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

* Fix action name

Co-authored-by: Oleksandr Andriienko <oandriie@redhat.com>
Signed-off-by: Dominika Zemanovicova <dzemanov@redhat.com>

---------

Signed-off-by: Dominika Zemanovicova <dzemanov@redhat.com>
Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>
Co-authored-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/workspaces/marketplace/app-config.yaml
+++ b/workspaces/marketplace/app-config.yaml
@@ -124,6 +124,10 @@ kubernetes:
 permission:
   # setting this to `false` will disable permissions
   enabled: true
+  rbac:
+    pluginsWithPermission:
+      - catalog
+      - extensions
 
 extensions:
   ### Example for how to enable installation to a file.
