feat(scorecard): add scorecard workspace (#1218)
* feat(scorecard): add scorecard workspace

* fix lockfile

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -18,5 +18,6 @@
 /workspaces/orchestrator                            @batzionb @mareklibra @gciavarrini
 /workspaces/theme                                   @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff
 /workspaces/sandbox                                 @lucifergene @rohitkrai03 @karthikjeeyar @xcoulon @alexeykazakov @mfrancisc @rsoaresd @jrosental @rajivnathan @MatousJobanek
+/workspaces/scorecard                               @christoph-jerolimov @rohitkrai03 @karthikjeeyar @eswaraiahsapram @its-mitesh-kumar
 /workspaces/redhat-resource-optimization            @ydayagi @mareklibra @batzionb @PreetiW
 /workspaces/quickstart                              @divyanshiGupta @christoph-jerolimov @ciiay @debsmita1 @its-mitesh-kumar @logonoff
