--- a/workspaces/orchestrator/plugins/orchestrator/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator/package.json
@@ -59,6 +59,7 @@
     "@backstage/core-plugin-api": "^1.10.7",
     "@backstage/errors": "^1.2.7",
     "@backstage/plugin-catalog": "^1.30.0",
+    "@backstage/plugin-catalog-react": "^1.16.0",
     "@backstage/plugin-permission-common": "^0.9.0",
     "@backstage/plugin-permission-react": "^0.4.34",
     "@backstage/types": "^1.2.1",
