chore(orchestrator): restructure docs and update config changes (#1261)
* updated config in docs and script

* docs(orchestrator): readme rewrite

* mention podman in prerequisistes

* add more details on using podman in local env

--- a/workspaces/orchestrator/plugins/orchestrator/app-config.yaml
+++ b/workspaces/orchestrator/plugins/orchestrator/app-config.yaml
@@ -10,3 +10,16 @@ dynamicPlugins:
           menuItem:
             icon: orchestratorIcon
             text: Orchestrator
+      entityTabs:
+        - path: /workflows
+          title: Workflows
+          mountPoint: entity.page.workflows
+      mountPoints:
+        - mountPoint: entity.page.workflows/cards
+          importName: OrchestratorCatalogTab
+          config:
+            layout:
+              gridColumn: '1 / -1'
+            if:
+              anyOf:
+                - IsOrchestratorCatalogTabAvailable
