--- a/workspaces/ai-integrations/packages/backend/package.json
+++ b/workspaces/ai-integrations/packages/backend/package.json
@@ -47,6 +47,7 @@
     "@backstage/plugin-techdocs-backend": "^2.0.0",
     "@red-hat-developer-hub/backstage-plugin-ai-experience-backend": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-catalog-backend-module-model-catalog": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-catalog-techdoc-url-reader-backend": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
     "node-gyp": "^10.0.0",
