--- a/workspaces/ai-integrations/plugins/catalog-techdoc-url-reader-backend/package.json
+++ b/workspaces/ai-integrations/plugins/catalog-techdoc-url-reader-backend/package.json
@@ -38,6 +38,7 @@
     "@backstage/config": "^1.2.0",
     "@backstage/errors": "^1.2.7",
     "@backstage/plugin-catalog-node": "^1.16.1",
+    "@red-hat-developer-hub/backstage-plugin-catalog-backend-module-model-catalog": "workspace:^",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "zod": "^3.22.4"
