--- a/workspaces/redhat-resource-optimization/packages/app/package.json
+++ b/workspaces/redhat-resource-optimization/packages/app/package.json
@@ -46,6 +46,7 @@
     "@backstage/theme": "^0.6.3",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@patternfly/patternfly": "^6.3.0",
     "@red-hat-developer-hub/backstage-plugin-orchestrator": "^2.5.1",
     "@red-hat-developer-hub/plugin-redhat-resource-optimization": "workspace:^",
     "@redhat-developer/red-hat-developer-hub-theme": "^0.5.0",
