fix(orchestrator): Align with RHDH @backstage/core-components version and add table translation (#1298)
Signed-off-by: Lior Soffer <liorsoffer1@gmail.com>

--- a/workspaces/orchestrator/plugins/custom-authentication-provider-module/package.json
+++ b/workspaces/orchestrator/plugins/custom-authentication-provider-module/package.json
@@ -46,7 +46,7 @@
   },
   "dependencies": {
     "@backstage/core-app-api": "^1.17.0",
-    "@backstage/core-components": "^0.17.2",
+    "@backstage/core-components": "0.17.2",
     "@backstage/core-plugin-api": "^1.10.7",
     "@backstage/integration-react": "^1.2.7",
     "@mui/material": "^5.17.1",
