--- a/workspaces/scorecard/app-config.yaml
+++ b/workspaces/scorecard/app-config.yaml
@@ -76,11 +76,32 @@ catalog:
     entityFilename: catalog-info.yaml
     pullRequestBranchName: backstage-integration
   rules:
-    - allow: [Component, System, API, Resource, Location]
+    - allow: [Component, System, Group, Resource, Location, Template, API]
   locations:
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
       target: ../../examples/entities.yaml
+
+    # Local example scorecards
+    - type: file
+      target: ../../examples/github-scorecard-only.yaml
+      rules:
+        - allow: [Component]
+
+    - type: file
+      target: ../../examples/jira-scorecard-only.yaml
+      rules:
+        - allow: [Component]
+
+    - type: file
+      target: ../../examples/all-scorecards.yaml
+      rules:
+        - allow: [Component]
+
+    - type: file
+      target: ../../examples/no-scorecards.yaml
+      rules:
+        - allow: [Component]
 
     # Local example template
     - type: file
