--- a/workspaces/scorecard/packages/app/package.json
+++ b/workspaces/scorecard/packages/app/package.json
@@ -48,6 +48,7 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@red-hat-developer-hub/backstage-plugin-scorecard": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-theme": "^0.9.1",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
