feat(marketplace): Enhanced filtering, badges, plugin details, and metadata display (#1394)
* updating schema

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* showing more plugin metadata

* feat: implement exact count filtering with combined URL parameters

- Add SupportLevel and SupportProvider enums to MarketplaceSupport types
- Export MarketplaceSupport types from marketplace-common package
- Implement single-pass exact count calculation for better performance
- Add support for combined URL parameters (e.g., spec.support.level=production,spec.support.name=Red Hat)
- Update badge system to show exact counts for GA, Community, Tech Preview, and Dev Preview plugins
- Optimize filtering logic to handle both single and combined spec.support parameters
- Fix import paths to use proper package exports instead of relative paths

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* handling multiple filters

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* adding icon and helperText in filter

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* removing examples/pluin changes

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* updating readme

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* adding changeset

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* adding helpertext for other plugin

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* fixing tsc issue

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* handling new supoort level

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* updating readme

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* updating report

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* chore(extensions): add more plugin examples

* chore(extensions): add more plugin examples

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(extensions): restore pre-instal

--- a/workspaces/marketplace/examples/plugins/3scale.yaml
+++ b/workspaces/marketplace/examples/plugins/3scale.yaml
@@ -6,17 +6,15 @@ metadata:
   name: 3scale
   title: APIs with 3scale
   description: Synchronize 3scale content into the Backstage catalog.
+  annotations:
+    extensions.backstage.io/pre-installed: 'true'
   tags:
     - 3scale
     - api
-  annotations:
-    extensions.backstage.io/certified-by: Red Hat
-    extensions.backstage.io/verified-by: Red Hat
 spec:
-  icon: https://janus-idp.io/images/plugins/3scale.svg
   author: Red Hat
   categories:
-    - API Discovery
+    - API Discovery API Discovery API Discovery API Discovery
   highlights:
     - OpenShift support
   support: asd
