--- a/workspaces/marketplace/examples/plugins/keycloak.yaml
+++ b/workspaces/marketplace/examples/plugins/keycloak.yaml
@@ -6,8 +6,9 @@ metadata:
   name: keycloak
   title: Authentication and Authorization with Keycloak
   description: Load users and groups from Keycloak, enabling use of multiple authentication providers to be applied to Backstage entities.
+  annotations:
+    extensions.backstage.io/pre-installed: 'true'
 spec:
-  icon: https://janus-idp.io/images/plugins/keycloak.svg
   developer: Red Hat
   lifecycle: production
   categories:
