--- a/workspaces/marketplace/examples/plugins/quay.yaml
+++ b/workspaces/marketplace/examples/plugins/quay.yaml
@@ -6,8 +6,9 @@ metadata:
   name: quay
   title: Container Image Registry for Quay
   description: View container image details from Quay in Backstage.
+  annotations:
+    extensions.backstage.io/pre-installed: 'true'
 spec:
-  icon: https://janus-idp.io/images/plugins/quay.svg
   author: Red Hat
   lifecycle: production
   categories:
