--- a/workspaces/marketplace/examples/plugins/support-dev-preview.yaml
+++ b/workspaces/marketplace/examples/plugins/support-dev-preview.yaml
@@ -3,10 +3,13 @@ apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   namespace: marketplace-plugin-demo
-  name: no-icon-no-description
-  title: No Icon No Description
+  name: support-dev-preview
+  title: Support Dev Preview
   annotations:
     extensions.backstage.io/pre-installed: 'true'
 spec:
   categories:
     - Test plugin entity
+  support:
+    provider: A provider
+    level: dev-preview
