--- a/workspaces/marketplace/examples/plugins/tekton.yaml
+++ b/workspaces/marketplace/examples/plugins/tekton.yaml
@@ -6,12 +6,16 @@ metadata:
   name: tekton
   title: Pipelines with Tekton
   description: Easily view Tekton PipelineRun status for your services in Backstage.
+  annotations:
+    extensions.backstage.io/pre-installed: 'true'
   links:
     - url: https://tekton.dev
       title: Tekton
 spec:
-  icon: https://janus-idp.io/images/plugins/tekton.svg
   developer: Red Hat
+  support:
+    provider: Red Hat
+    level: community
   lifecycle: production
   owner: redhat
   categories:
