--- a/workspaces/marketplace/examples/plugins/certified-plugin-3-by-vendor-b.yaml
+++ b/workspaces/marketplace/examples/plugins/certified-plugin-3-by-vendor-b.yaml
@@ -3,10 +3,12 @@ apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   namespace: marketplace-plugin-demo
-  name: no-icon-no-description
-  title: No Icon No Description
+  name: certified-plugin-3-by-vendor-b
+  title: Certified Plugin 3 by Vendor B
+  description: This is a certified plugin example
   annotations:
     extensions.backstage.io/pre-installed: 'true'
+    extensions.backstage.io/certified-by: Vendor B
 spec:
   categories:
     - Test plugin entity
