--- a/workspaces/marketplace/examples/plugins/pre-installed-false.yaml
+++ b/workspaces/marketplace/examples/plugins/pre-installed-false.yaml
@@ -3,10 +3,11 @@ apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   namespace: marketplace-plugin-demo
-  name: no-icon-no-description
-  title: No Icon No Description
+  name: pre-installed-false
+  title: Pre-installed False
+  description: Pre-installed false means that the YAML is NOT bundled with RHDH and this means this IS a custom plugin.
   annotations:
-    extensions.backstage.io/pre-installed: 'true'
+    extensions.backstage.io/pre-installed: 'false'
 spec:
   categories:
     - Test plugin entity
