--- a/workspaces/marketplace/examples/plugins/support-undefined.yaml
+++ b/workspaces/marketplace/examples/plugins/support-undefined.yaml
@@ -3,8 +3,8 @@ apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   namespace: marketplace-plugin-demo
-  name: no-icon-no-description
-  title: No Icon No Description
+  name: support-undefined
+  title: Support undefined
   annotations:
     extensions.backstage.io/pre-installed: 'true'
 spec:
