--- a/workspaces/marketplace/examples/plugins/support-unknown-level.yaml
+++ b/workspaces/marketplace/examples/plugins/support-unknown-level.yaml
@@ -3,10 +3,14 @@ apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   namespace: marketplace-plugin-demo
-  name: no-icon-no-description
-  title: No Icon No Description
+  name: support-unknown-level
+  title: Support Unknown Level
   annotations:
     extensions.backstage.io/pre-installed: 'true'
 spec:
   categories:
     - Test plugin entity
+  support:
+    provider: a-string
+    # broken by design
+    level: a-level
