--- a/workspaces/marketplace/examples/plugins/topology.yaml
+++ b/workspaces/marketplace/examples/plugins/topology.yaml
@@ -6,8 +6,9 @@ metadata:
   name: topology
   title: Application Topology for Kubernetes
   description: Visualize the deployment status and related resources of your applications deployed on any Kubernetes cluster.
+  annotations:
+    extensions.backstage.io/pre-installed: 'true'
 spec:
-  icon: https://janus-idp.io/images/plugins/topology.svg
   author: Red Hat
   lifecycle: production
   categories:
