RHIDP 7065: gitlab bulk import backend support (#1336)
* feat(bulk-import-backend): addition of Gitlab support to the bulk-import backend.

see https://issues.redhat.com/browse/RHIDP-8281

* squash: type fixes

* squash: removing comments and todos

* squash: consolidate duplicated code

* squash: consolidate duplicated code

* squash: a little cleanup

* squash: update @gitbeaker/rest module to the latest release

* squash: prettier fix for api-docs

* squash: adding in an exclusion for the dupe tests

* squash: prettier fixes

* squash: code cleanup

* squash: more code cleanup

* squash: fixing sonarcloud secrutiy hotspots

* squash: Gitlab bulk import fix typization (#2)

* feat(bulk-import-backend): fix typization for @gitbeaker/rest

Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

* squash: updates to make the tests work

---------

Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>
Co-authored-by: Oleksandr Andriienko <oandriie@redhat.com>

* squash add back the things i forgot i commented out

* squash: findAllImports needed both integrations.  fixed the delete import thing

* squash: trying to remove duplications

* squash: removing commented code

* squash: sending back the approvalTool

* squash: update and fix tests

* squash: remove commented code

* squash: Update workspaces/bulk-import/.changeset/rude-boats-cough.md

Co-authored-by: Christoph Jerolimov <jerolimov@gmail.com>

* squash: update yarn.lock after the rebase

---------

Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>
Co-authored-by: Oleksandr Andriienko <oandriie@redhat.com>
Co-authored-by: Christoph Jerolimov <jerolimov@gmail.com>

--- a/workspaces/bulk-import/app-config.yaml
+++ b/workspaces/bulk-import/app-config.yaml
@@ -34,6 +34,9 @@ backend:
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
 integrations:
+  gitlab:
+    - host: gitlab.com
+      token: ${GITLAB_TOKEN}
   github:
     - host: github.com
       # This is a Personal Access Token or PAT from GitHub. You can find out how to generate this token, and more information
