--- a/workspaces/theme/packages/app/package.json
+++ b/workspaces/theme/packages/app/package.json
@@ -43,9 +43,11 @@
     "@backstage/plugin-techdocs-react": "^1.3.2",
     "@backstage/plugin-user-settings": "^0.8.25",
     "@backstage/theme": "^0.6.8",
+    "@backstage/ui": "^0.7.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
-    "@red-hat-developer-hub/backstage-plugin-bc-test": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-bcc-test": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-bui-test": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-mui4-test": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-mui5-test": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-theme": "workspace:^",
