chore(e2e): Scorecard e2e tests (#1405)
* add scorecard e2e tests

* restructured tests

* add jira to config

---------

Co-authored-by: HusneShabbir <husneshabbir447@gmail.com>
Co-authored-by: Jan Richter <jrichter@redhat.com>

--- a/workspaces/scorecard/app-config.yaml
+++ b/workspaces/scorecard/app-config.yaml
@@ -1,3 +1,12 @@
+jira:
+  # Required
+  baseUrl: https://issues.redhat.com
+  # Required
+  token: dummy_token
+  # Required: Supported products: `cloud` or `datacenter`
+  product: cloud
+  # By default, the latest version is used. You can omit this prop when using the latest version.
+  apiVersion: '3'
 app:
   title: Scaffolded Backstage App
   baseUrl: http://localhost:3000
