Copy over techdocs-mcp-tool plugin from redhat-ai-dev fork (#1491)
* Copy over techdocs-mcp-tool plugin from redhat-ai-dev fork

Co-authored-by: Theofanis Petkos <thepetk@gmail.com>
Signed-off-by: John Collier <jcollier@redhat.com>

* Various linter and changeset fixes

Signed-off-by: John Collier <jcollier@redhat.com>

* yarn dedupe

Signed-off-by: John Collier <jcollier@redhat.com>

* Fix tests

Signed-off-by: John Collier <jcollier@redhat.com>
Co-authored-by: Theofanis Petkos <thepetk@gmail.com>

---------

Signed-off-by: John Collier <jcollier@redhat.com>
Co-authored-by: Theofanis Petkos <thepetk@gmail.com>

--- a/workspaces/mcp-integrations/app-config.yaml
+++ b/workspaces/mcp-integrations/app-config.yaml
@@ -9,6 +9,7 @@ backend:
   actions:
     pluginSources:
       - 'software-catalog-mcp-tool'
+      - 'techdocs-mcp-tool'
   # Used for enabling authentication, secret is shared by all backend plugins
   # See https://backstage.io/docs/auth/service-to-service-auth for
   # information on the format
