--- a/workspaces/mcp-integrations/plugins/techdocs-mcp-tool/package.json
+++ b/workspaces/mcp-integrations/plugins/techdocs-mcp-tool/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@red-hat-developer-hub/backstage-plugin-software-catalog-mcp-tool",
-  "version": "0.2.0",
+  "name": "@redhat-developer-hub/backstage-plugin-techdocs-mcp-tool",
+  "version": "0.1.0",
   "license": "Apache-2.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
@@ -12,13 +12,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/redhat-developer/rhdh-plugins",
-    "directory": "workspaces/mcp-integrations/plugins/software-catalog-mcp-tool"
+    "directory": "workspaces/mcp-integrations/plugins/techdocs-mcp-tool"
   },
   "backstage": {
     "role": "backend-plugin",
-    "pluginId": "software-catalog-mcp-tool",
+    "pluginId": "techdocs-mcp-tool",
     "pluginPackages": [
-      "@red-hat-developer-hub/backstage-plugin-software-catalog-mcp-tool"
+      "@redhat-developer-hub/backstage-plugin-techdocs-mcp-tool"
     ]
   },
   "scripts": {
@@ -31,21 +31,27 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/backend-defaults": "^0.11.0",
-    "@backstage/backend-plugin-api": "^1.4.0",
-    "@backstage/catalog-client": "^1.10.1",
-    "@backstage/catalog-model": "^1.7.5",
+    "@backstage/backend-defaults": "^0.12.0",
+    "@backstage/backend-plugin-api": "^1.4.2",
+    "@backstage/catalog-client": "^1.11.0",
+    "@backstage/catalog-model": "^1.7.2",
     "@backstage/errors": "^1.2.7",
-    "@backstage/plugin-catalog-node": "^1.17.1",
+    "@backstage/plugin-catalog-node": "^1.18.0",
+    "@backstage/plugin-techdocs-node": "^1.13.6",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
+    "node-fetch": "^2.6.12",
+    "turndown": "^7.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@backstage/backend-test-utils": "^1.6.0",
-    "@backstage/cli": "^0.33.0",
+    "@backstage/backend-test-utils": "^1.8.0",
+    "@backstage/cli": "^0.34.1",
+    "@backstage/config": "^1.3.3",
     "@types/express": "^4.17.6",
+    "@types/node-fetch": "^2.6.4",
     "@types/supertest": "^2.0.12",
+    "@types/turndown": "^5.0.5",
     "supertest": "^6.2.4"
   },
   "files": [
